# multi-view-3d-reconstruction

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  header.tex  plan.md  referencias-curso.md  resumen.md  sift.py
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt  ruff.toml
backend/scripts/: README.md  orb_test.py  sift.py  synthetic_stereo.py  validate_geometry.py
backend/src/sfm_pipeline/: __init__.py  cli.py  config.py  debug.py  export.py  features.py  geometry.py  matching.py  metrics.py  preprocess.py  sfm.py  triangulation.py  utils.py
backend/src/sfm_pipeline/api/: __init__.py  server.py
data/: README.md  datasets.yaml
data/controlgamecube/: README.md  analisis.py
data/gamecube/: README.md
data/other/: README.md  intrinsics.json
docs/: README.md  devices.md  idea-1-3d-reconstruction.md  plan.md
docs/contracts/: README.md  cli-sfm.md  cloud-ply.md  datasets.md  intrinsics-json.md  matches-npz.md  metrics-json.md
docs/deliveries/: README.md
docs/final/: README.md  document.md
docs/lectures/: README.md
docs/presentation/: README.md
docs/prompts/: README.md
docs/theory/: 01_introduction.md  02_filtering-convolution.md  03_fourier-morphology.md  04_local-features.md  05_projective-geometry.md  06_homography-stitching.md  (+3 more)
frontend/: Dockerfile  README.md  index.html  package.json  vite.config.js
outputs/: README.md
scripts/: 01_start.sh  02_stop.sh  03_restart.sh  04_logs.sh  05_shell.sh  06_pipeline.sh  07_export_logs.sh  08_build.sh  09_clean.sh  README.md  lib.sh
(+7 files in other folders)
